# agentyc

./: .gitignore  LICENSE  README.md  org_README.md  pyproject.toml
.github/workflows/: auto-assign.yml  ci.yml
api/: server.py
challenges/cost/: budget_adherence.yml  token_optimization.yml
challenges/reliability/: error_recovery.yml  multi_source_synthesis.yml  retry_under_failure.yml
challenges/safety/: hallucination_resistance.yml  pii_handling.yml  prompt_injection_resistance.yml
challenges/speed/: latency_under_load.yml  streaming_response.yml
cli/: __init__.py  cloud.py  config.py  main.py  ollama.py
cli/commands/: __init__.py  coach.py  dashboard.py  demo_day.py  eval.py  init_cmd.py  leaderboard.py  publish.py  screen.py
core/: __init__.py  batch.py  coach.py  db.py  demo_day.py  eval_engine.py  runner.py  scorer.py  screener.py  spec.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  api.ts  index.css
demo/: README.md
demo/api-agent/: agent.yml  server.py
demo/crewai-agent/: agent.py  agent.yml
demo/docker-agent/: agent.py  agent.yml
demo/langchain-agent/: agent.py  agent.yml
demo/python-agent/: agent.py  agent.yml
prompts/: coach_local.txt  coach_pro.txt  demo_day_investors.txt  demo_day_pitch.txt  eval_judge.txt  screener.txt
templates/api/: agent.yml  server.py
templates/basic/: agent.py  agent.yml
templates/crewai/: agent.yml
templates/docker/: agent.py  agent.yml
templates/langchain/: agent.yml
templates/multi-step/: agent.py  (+1 more)
tests/: conftest.py  test_coach.py  test_db.py  test_eval_engine.py  test_runner.py  test_scorer.py  test_screener.py  test_spec.py
(+5 files in other folders)
